--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "bootstrap": "^5.3.1",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "mongodb": "4.1",
     "mongoose": "^7.2.3",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "promise": "^8.3.0"
   }
 }
