--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^7.2.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
-    "promise": "^8.3.0"
+    "promise": "^8.3.0",
+    "react-router-dom": "^6.15.0"
   }
 }
